Swapped out QuickCheck with Triq so everyone can join in the testing fun and updated build configuration.

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,59 @@
-{so_name, "dlcbf.so"}.
+%% -*- mode: erlang;erlang-indent-level: 4;indent-tabs-mode: nil -*-
+%% ex: ft=erlang ts=4 sw=4 et
 
-{erl_opts, [debug_info, fail_on_warning]}.
+{cover_enabled, true}.
+
+{erl_opts, [
+            {src_dirs, ["src"]},
+            [debug_info, {d,'TRIQ',true}],
+            warnings_as_errors,
+            bin_opt_info,
+            warn_format,
+            warn_export_all,
+            warn_export_vars,
+            warn_obsolete_guard,
+            warn_unused_import,
+            warn_bif_clash,
+            %% warn_missing_spec,
+            warn_untyped_record,
+            debug_info]}.
+
+{port_env, [{"CFLAGS", "$CFLAGS -g -O3 -Wall"},
+            {"R1([1-4]|5[AB]-).*(linux|freebsd|darwin)", "DRV_CFLAGS", "$DRV_CFLAGS -DEBUG"}]}.
+
+{port_specs, [{"priv/lib/dlcbf.so", ["c_src/dlcbf.c"]}
+%              {pre_hooks, [{compile, "./scripts/rebar-pre-script"},
+%                           {clean, "./scripts/rebar-pre-script clean"} ]}.
+              ]}.
+
+{deps, [
+       {triq, ".*", {git, "git://github.com/krestenkrab/triq.git", {branch, "master"}}},
+       {proper, ".*", {git, "git://github.com/manopapad/proper.git", {branch, "master"}}} ]}.
+
+{erl_opts, [
+            %% bin_opt_info,
+            warn_format,
+            warn_export_all,
+            warn_export_vars,
+            warn_obsolete_guard,
+            %% warn_unused_import,
+            warn_bif_clash,
+            %% warn_missing_spec,
+            warn_untyped_record,
+            debug_info]}.
+
+{edoc_opts, [{doclet, edown_doclet},
+             {src_path, ["src", "test"]},
+             {app_default,"http://www.erlang.org/doc/man"}]}.
+
+{eunit_opts, [verbose]}.
+
+{erlydtl_opts, []}.
+
+{dialyzer_opts, [{warnings, [error_handling,
+                             race_conditions,
+                             behaviours]}]}.
+
+{xref_checks, [undefined_function_calls,
+               locals_not_used,
+               exports_not_used]}.
